--- a/.github/workflows/build_sample_app.yml
+++ b/.github/workflows/build_sample_app.yml
@@ -15,9 +15,11 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - run: git clone https://github.com/shonansurvivors/rails-deploy.git -b chapter-0-start ${APP_CODE_PATH_HOST}
+      - run: git clone https://github.com/shonansurvivors/rails-deploy.git -b chapter-0-end ${APP_CODE_PATH_HOST}
 
       - run: make bundle-update
+
+      - run: make yarn
 
       - run: make precompile
 
@@ -26,5 +28,3 @@ jobs:
       - run: make test
 
       - run: make up
-
-      - run: curl -I localhost:3000
