--- a/.github/workflows/build_sample_app.yml
+++ b/.github/workflows/build_sample_app.yml
@@ -28,3 +28,12 @@ jobs:
       - run: make test
 
       - run: make up
+
+      - uses: 8398a7/action-slack@v3.9.2
+        with:
+          status: ${{ job.status }}
+          fields: all
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+        if: always()
