--- a/.github/workflows/build_sample_app.yml
+++ b/.github/workflows/build_sample_app.yml
@@ -35,5 +35,5 @@ jobs:
           fields: all
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL_ALERT }}
         if: always()
