--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,32 +1,28 @@
-upstream puma {
+upstream app {
     server unix:/var/www/tmp/sockets/puma.sock;
 }
 
 server {
     listen       80;
-    listen  [::]:80;
-    server_name  localhost;
-
-    #access_log  /var/log/nginx/host.access.log  main;
-
     root /var/www/public;
+
+    client_max_body_size 10m;
+
+    add_header X-Frame-Options SAMEORIGIN;
+    add_header X-XSS-Protection "1; mode=block";
+    add_header X-Content-Type-Options nosniff;
+
     try_files $uri @app;
 
     location @app {
+        proxy_set_header Host $http_host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $http_host;
-        proxy_pass http://puma;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_pass http://app;
     }
 
     error_page 404 /404.html;
     error_page 422 /422.html;
     error_page 500 502 503 504 /500.html;
-
-    # deny access to .htaccess files, if Apache's document root
-    # concurs with nginx's one
-    #
-    #location ~ /\.ht {
-    #    deny  all;
-    #}
 }
