--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,31 +1,28 @@
 user  nginx;
 worker_processes  auto;
 
-error_log  /var/log/nginx/error.log notice;
-pid        /var/run/nginx.pid;
-
+error_log  /var/log/nginx/error.log;
+pid        /run/nginx.pid;
 
 events {
     worker_connections  1024;
 }
 
-
 http {
-    include       /etc/nginx/mime.types;
-    default_type  application/octet-stream;
-
     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
 
     access_log  /var/log/nginx/access.log  main;
 
-    sendfile        on;
-    #tcp_nopush     on;
+    sendfile            on;
+    tcp_nopush          on;
+    tcp_nodelay         on;
+    keepalive_timeout   65;
+    types_hash_max_size 4096;
 
-    keepalive_timeout  65;
-
-    #gzip  on;
+    include             /etc/nginx/mime.types;
+    default_type        application/octet-stream;
 
     include /etc/nginx/conf.d/*.conf;
 }
